--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+<title>My Travel Website</title>
+</head>
+<body>
+<h1>Welcome to My Travel Blog</h1>
+<p>This website is about travelling.</p>
+</body>
+</html>
